# postgres-compatibility-index

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  docker-compose.yml  pyproject.toml  readme.md
postgres-compatibility-index/: pci_autotest.py  pci_calculator.py
postgres-compatibility-index/outputs/: AlloyDB.json  AuroraDSQL.json  EDBPostgres(EPAS).json  YugabyteDB.json  pgEdge.json
