[project]
name = "postgres-compatibility-index"
version = "0.1.0"
description = "PostgreSQL Compatibility Index"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2-binary>=2.9.10",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "types-psycopg2>=2.9.21.20250318",
]
